# trobin_ecs

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
notes/: devNotesArchitypes  devNotesTrobin.txt
src/: devNotesMemoryAllocator.txt
src/ecs/: Components.h
src/engine/: Archetype.cpp  Archetype.h  ArchetypeManager.h  MetaArchetype.h
src/engine/ecs/: Components.h
src/practice/: MemoryPool.h  StdTemplatePractice.cpp  TemplateMeta_1.h
tools/: Logger.h  TstTimer.h
trobin_ecs/: CMakeLists.txt  trobin_ecs.cpp
trobin_ecs/src/: EntityManager.h  StdTemplatePractice.cpp  devNotesArchitypes  devNotesTrobin.txt  devNotesUintVsInt.txt  main.cpp  main.h
trobin_ecs/src/ecs/: Components.h
trobin_ecs/src/engine/: Profiler.h  Timer.h
trobin_ecs/src/practice/: Archetype.h  TemplateMeta_2.h
trobin_ecs/src/test/: TstTimer.h
trobin_ecs/src/utils/: MathUtils.cpp  MathUtils.h
